# Cinnamon

./: README.md  cinnamon.js  cute_main_param  index.html  m.index.html  perft.html  regression_test.html  test.html
BitboardCalculator/: index.html
img/: perft.html
src/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  Eval.cpp  Eval.h  GenMoves.cpp  GenMoves.h  GetOpt.h  Hash.cpp  Hash.h  IterativeDeeping.cpp  IterativeDeeping.h  Makefile  Search.cpp  Search.h  SearchManager.cpp  SearchManager.h  Uci.cpp  Uci.h  WrapperCinnamon.cpp  cinnamon.vcxproj  def.h  main.cpp
src/db/: Endgame.h  OpenBook.cpp  OpenBook.h
src/db/bitbase/: kpk.h
src/db/gaviota/: GTB.cpp  GTB.h
src/db/gtb/: gtb-probe.c
src/db/syzygy/: SYZYGY.h
src/namespaces/: String.h  bits.h  board.cpp  board.h  constants.h  see.h
src/perft/: Perft.cpp  Perft.h  PerftThread.cpp  PerftThread.h
src/test/: perft.cpp  pin.cpp  search.cpp  see.cpp  string.cpp  test.cpp
src/threadPool/: Spinlock.h  Thread.h  ThreadPool.h
src/util/: Bitboard.h  FileUtil.h  IniFile.cpp  IniFile.h  Random.h  String.cpp  String.h  Texel.h  logger.h
src/util/bench/: Bench.h  Time.h  Times.h
src/util/tuning/: MseScore.h  Texel.h  Tune.h
